test/expected/declare_o_plus2_rkd_rk.out
struct S; declare ++ as operator (reference to S, double) returning referenc...
                                         ^
42: error: parameter of postfix non-member operator ++ must be int
